fixed font size and alignment in the top nav.

--- a/resources/css/top-nav.css
+++ b/resources/css/top-nav.css
@@ -7,7 +7,7 @@ https://www.youtube.com/watch?v=oYRda7UtuhA
 
 nav {
     display: flex;
-    padding: 2.0% 6%;
+    padding: 2.0% 3%;
     /* arg controls the height bar */
     /* padding: 1% 6%;: This sets padding for the nav element. It applies 1% of the width of the parent container to the top and bottom, and 6% of the width to the left and right. The percentage-based padding can make the navigation bar responsive, adapting to different screen sizes. */
 
@@ -27,7 +27,7 @@ nav {
 
     text-align: right;
     /* height of text of li from the bottom strip  */
-    height: 40px;
+    height: 42px;
     align-items: right;
     /* background-color: white;  */
 }
@@ -50,7 +50,7 @@ nav {
     color: white;
     /* background-color: blue; */
     text-decoration: none;
-    font-size: 12px;
+    font-size: 13px;
 
 }
 
@@ -88,10 +88,6 @@ nav img {
     margin: 10px;
     padding: 5px;
     padding-left: 0px;
-    /* margin-right: 10px; */
-
-
-
 }
 
 /* hide the small screen nav open close icons in full screen mode */
@@ -107,7 +103,7 @@ nav .fa-bars {
 @media(max-width:768px) {
     nav {
         display: flex;
-        padding: 1.5% 6%;
+        padding: 6% 4.5%;
         /* arg controls the height bar */
         /* padding: 1% 6%;: This sets padding for the nav element. It applies 1% of the width of the parent container to the top and bottom, and 6% of the width to the left and right. The percentage-based padding can make the navigation bar responsive, adapting to different screen sizes. */
     
@@ -171,8 +167,8 @@ nav .fa-bars {
     .tech-pro-school {
         color: orange;
         text-decoration: none;
-     
         font-weight: bolder;
+        font-size: 22px;
         height: auto;
         text-align: right;
         align-items: center;
